--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,18 @@
+@import 'leaflet/dist/leaflet.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+
+/* CSS tambahan Anda di bawah sini */
+.filament-forms-map-picker-component .leaflet-container {
+    z-index: 10;
+    height: 100%;
+    width: 100%;
+}
+/* Fix untuk marker yang hilang */
+.leaflet-default-icon-path {
+    background-image: url('leaflet/dist/images/marker-icon.png');
+}
